
[tool.poetry]
name = "volosti"
version = "0.1.dev2"
description = "Метапакет разрабатываемого проекта"
license = "MIT"

authors = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]
maintainers = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]

readme = "README.rst"
homepage = "https://pypi.org/project/volosti"
repository = "https://github.com/volosti/volosti"

keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.9"
aiosqlite = { version = ">=0.17.0", optional = true }
asyncpg = { version = ">=0.27.0", optional = true }
cryptography = { version = "^38.0.3", optional = true }
gunicorn = { version = "^20.1.0", optional = true }
hypercorn = { version = ">=0.14.3", optional = true }
jinja2 = { version = "^3.1.2", optional = true }
pycryptodome = { version = "^3.15.0", optional = true }
python-multipart = { version = ">=0.0.5", optional = true }
uvicorn = { version = ">=0.19.0", optional = true }
volosti-gui-kivy = { version = "^0", optional = true, allow-prereleases = true }
volosti-server-sanic = { version = "^0", optional = true, allow-prereleases = true }
volosti-server-starlette = { version = "^0", optional = true, allow-prereleases = true }

[tool.poetry.extras]
gunicorn = ["gunicorn"]
gui-kivy = ["volosti-gui-kivy"]
hypercorn = ["hypercorn"]
openssl = ["cryptography"]
postgresql = ["asyncpg"]
pycryptodome = ["pycryptodome"]
server-sanic = ["volosti-server-sanic"]
server-sanic-wui = ["volosti-server-sanic", "jinja2"]
sqlite = ["aiosqlite"]
server-starlette = ["volosti-server-starlette"]
server-starlette-wui = ["volosti-server-starlette", "jinja2", "python-multipart"]
uvicorn = ["uvicorn"]
all = [
    "aiosqlite",
    "asyncpg",
    "cryptography",
    "gunicorn",
    "hypercorn",
    "jinja2",
    "pycryptodome",
    "python-multipart",
    "uvicorn",
    "volosti-gui-kivy",
    "volosti-server-sanic",
    "volosti-server-starlette",
]

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = ">=0.982"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
